VS ApexCode/UlbergProject0/force-app/main/default/objects/Previously_Sold_Item__c/Previously_Sold_Item__c.object-meta.xml
<CustomObject>
    <label>Previously Sold Item</label>
    <nameField>
        <label>Previously Sold Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Previously Sold Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>