VS ApexCode/UlbergProject0/force-app/main/default/objects/Previously_Sold_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Previously Sold Items</relationshipLabel>
    <relationshipName>Previously_Sold_Items</relationshipName>
    <type>Lookup</type>
</CustomField>