VS ApexCode/UlbergProject0/force-app/main/default/objects/Previously_Sold_Item__c/fields/RatingNumber__c.field-meta.xml
<CustomField>
    <fullName>RatingNumber__c</fullName>
    <label>RatingNumber</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>