VS ApexCode/UlbergProject0/force-app/main/default/objects/Previously_Sold_Item__c/fields/Total_Sold_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_Sold_Items__c</fullName>
    <displayFormat>IT-{000}</displayFormat>
    <label>Total Sold Items</label>
    <type>AutoNumber</type>
</CustomField>